--- a/Markdown_Editor.html
+++ b/Markdown_Editor.html
@@ -11,8 +11,15 @@
     <div id="container">
         <!-- ArthurSlog_Manual_Area -->
         <div id="editorManual">
-            <div id="editorManual_Title">ArthurSlog 创作中心</div>
-            <div id="editorManual_Tool">工具栏（建设中...）</div>
+            <div id="editorManual_Title">
+                <p id="editorManual_Title_Arthur">Arthur</p>
+                <p id="editorManual_Title_Slog">Slog</p>
+                <p id="editorManual_Title_createCenter">创作中心</p>
+            </div>
+            <div id="editorManual_middleLine"></div>
+            <div id="editorManual_Tool">
+                <p>building...</p>
+            </div>
         </div>
         <div id="editorContent">
             <!-- ArthurSlog_MarkdownEditor_Area -->
@@ -49,14 +56,16 @@
     <style>
         html,
         body {
-            height: 100%;
-            display: block;
-            overflow: hidden;
-        }
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
 
-        body {
-            margin: 0;
-            padding: 0;
+            max-width: 100%;
+            max-height: 100%;
+            overflow: hidden;
         }
 
         #container {
@@ -70,24 +79,72 @@
         #EditorManual {
             display: flex;
             flex-direction: column;
-            position: relative;
-            margin-left: 0%;
-            margin-right: 0%;
+            position: absolute;
+            margin: 0;
             height: 15vh;
         }
 
         #editorManual_Title {
             margin-left: 0%;
             margin-right: 0%;
-            height: 10vh;
-            background-color: ghostwhite;
+            height: 9.5vh;
+            display: flex;
+            flex-direction: row;
+        }
+
+        #editorManual_Title_Arthur {
+            font-size: 28px;
+            font-style: italic;
+            color: rgb(255, 0, 0);
+            font-weight: 800;
+            position: absolute;
+            margin: 0;
+            padding-top: 4vh;
+            padding-left: 56px;
+        }
+
+        #editorManual_Title_Slog {
+            font-size: 28px;
+            font-style: italic;
+            color: rgb(17, 1, 1);
+            font-weight: 800;
+            position: absolute;
+            margin: 0;
+            padding-top: 4vh;
+            padding-left: 138px;
+        }
+
+        #editorManual_Title_createCenter {
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 300;
+            color: rgb(114, 123, 128);
+            position: absolute;
+            margin: 0;
+            padding-top: 5vh;
+            padding-left: 208px;
+        }
+
+        #editorManual_middleLine {
+            margin: 0;
+            padding: 0;
+            height: 0.5vh;
+            background-color: rgba(241, 248, 255, 0.966);
         }
 
         #editorManual_Tool {
             margin-left: 0%;
             margin-right: 0%;
             height: 5vh;
-            background-color: rgb(211, 250, 255);
+        }
+
+        #editorManual_Tool>p {
+            font-size: 16px;
+            font-style: italic;
+            position: relative;
+            top: calc(100% - 20px);
+            margin: 0;
+            padding-left: 56px;
         }
 
         #editorContent {
@@ -104,8 +161,8 @@
             margin-left: 0%;
             margin-right: 0%;
             overflow: scroll;
-            background-color: aliceblue;
-            text-decoration:none;
+            background-color: rgba(199, 206, 212, 0.678);
+            text-decoration: none;
         }
 
         #middleLine {
