updte MarkdownEditor css

--- a/Markdown_Editor.html
+++ b/Markdown_Editor.html
@@ -99,7 +99,7 @@
             font-weight: 800;
             position: absolute;
             margin: 0;
-            padding-top: 4vh;
+            top: calc(4%);
             padding-left: 56px;
         }
 
@@ -110,7 +110,7 @@
             font-weight: 800;
             position: absolute;
             margin: 0;
-            padding-top: 4vh;
+            top: calc(4%);
             padding-left: 138px;
         }
 
@@ -121,7 +121,7 @@
             color: rgb(114, 123, 128);
             position: absolute;
             margin: 0;
-            padding-top: 5vh;
+            top: calc(4% + 6px);
             padding-left: 208px;
         }
 
